syntax = "proto3";

package calculator;

option java_package = "com.proto.sum";
option java_multiple_files = true;

message PrimesRequest {
  int32 number = 1;
}

message PrimesResponse {
  int32 number = 1;
}
