syntax = "proto3";

package calculator;

option java_package = "com.proto.sum";
option java_multiple_files = true;

message SumRequest {
  int32 first = 1;
  int32 second = 2;
}

message SumResponse {
  int32 result = 1;
}

